# hpxla

./: CMakeLists.txt  LOCAL_BLAS_BACKEND_STATUS.rst  README.md  TODO.rst
applications/: CMakeLists.txt  naive_smp_smith_waterman.cpp  serial_smith_waterman.cpp
applications/smith_waterman/: CMakeLists.txt  blocked_smp_smith_waterman.cpp  naive_smp_smith_waterman.cpp  serial_smith_waterman.cpp
cmake/Modules/: FindPkgConfig.cmake
hpxla/: compare_real.hpp  config.hpp  distributed_submatrix.hpp  local_blas.hpp  local_fwd.hpp  local_matrix.hpp  local_matrix_view.hpp  matrix_dimensions.hpp  policies.hpp  policies_fwd.hpp
hpxla/local_blas/: blas_enums.hpp  blas_level_1.hpp  blas_level_2.hpp  blas_level_3.hpp  blas_order.hpp
hpxla/local_blas/backends/atlas/: blas_enums.hpp  blas_level_1.hpp  blas_level_2.hpp  blas_level_3.hpp  blas_order.hpp
hpxla/local_blas/backends/gsl/: blas_enums.hpp  blas_level_1.hpp  blas_level_2.hpp  blas_level_3.hpp  blas_order.hpp
hpxla/policies/: indexing_policies.hpp  partitioning_policies.hpp
hpxla/server/: distributed_submatrix.hpp
hpxla/stubs/: distributed_submatrix.hpp
src/: CMakeLists.txt
src/server/: distributed_submatrix.cpp
tests/: CMakeLists.txt  local_blas_level_1.cpp  local_blas_level_2.cpp  local_matrix.cpp  local_matrix_view.cpp  std_complex_cblas_compatibility.cpp
tests/component/: CMakeLists.txt  distributed_submatrix.cpp
